feat(#80): 코드 오탈자 수정